--- a/INSTALL
+++ b/INSTALL
@@ -28,10 +28,16 @@ They freely distributed at address:
 
 4- To use GeneWeb, move the directory "distribution" to another place, or
    rename it.
+   On macOSX, do:
+   	   make install
+   This will install the distribution folder on your Desktop and rename it "GeneWeb-7.00-Mac" 
+   (or another name of your choice).
 
-   Go to this directory and launch the command "./gwsetup".
+   Go to this directory and launch the commands "./gwd" and possibly "./gwsetup".
+   On macOSX, geneweb.command will kill previous instances, launch both gwd and gwsetup 
+   and minimize the window.
 
-   The reason why it is better to move this directory is that "make clean"
+   The reason why it is much better to move this directory is that "make clean"
    deletes it, and another "make distrib" overwrites it. If you created
    genealogic databases inside, they would be deleted.
 
